# crustaison

./: .gitignore  COMPLETION-GUIDE.md  Cargo.toml  DEVELOPMENT_NOTES.md  HEARTBEAT_IMPLEMENTATION.md  HEARTBEAT_SCHEDULER.md  LOTO_Boat_Rental_2023_Summary.md  PHASES.md  PROMPT_INJECTION_HARDENING.md  README.md  default_config.toml  memory_dump.md
docs/: API.md  ARCHITECTURE.md  CONFIG.md  EXAMPLES.md
doctrine/: agents.md  principles.md  soul.md
evals/: README.md  example.jsonl  real_01.jsonl  real_02.jsonl  real_03.jsonl  real_04.jsonl  real_05.jsonl  real_06.jsonl  real_07.jsonl  real_08.jsonl  real_09.jsonl  real_10.jsonl  real_11.jsonl  real_12.jsonl  real_13.jsonl  real_14.jsonl  real_15.jsonl  real_16.jsonl  real_17.jsonl
scripts/: embed.py  miller_roster_full.py  sheriff_roster.py
src/: agent.rs  agent.rs.bak  antennae.rs  compact.rs  coordinator.rs  destructive_guard.rs  judge.rs  main.rs  molts.rs  regrowth.rs  telemetry.rs
src/authority/: executor.rs  gateway.rs  mod.rs  policy.rs
src/cli/: mod.rs
src/cognition/: doctrine_loader.rs  memory_engine.rs  mod.rs  planner.rs  reflection.rs
src/config/: config.rs  mod.rs
src/ledger/: git_ledger.rs  mod.rs
src/memory/: mod.rs
src/plugins/: mod.rs
src/providers/: minimax.rs  mod.rs  nexa.rs  ollama.rs  provider.rs  subprocess.rs
src/rag/: mod.rs
src/runtime/: checks.rs  heartbeat.rs  memory_json.rs  mod.rs  run_logs.rs  scheduler.rs
src/sessions/: mod.rs
src/telegram/: mod.rs
src/tools/: browser.rs  builder.rs  email.rs  exec.rs  files.rs  gdrive.rs  github.rs  google.rs  http.rs  lake.rs  (+11 more)
(+3 files in other folders)
