[package]
name = "crustaison"
version = "0.1.0"
edition = "2021"
description = "A self-improving AI agent with proper safety architecture"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Async utilities
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dirs = "5"
toml = "0.8"

# Markdown parsing
pulldown-cmark = "0.10"

# HTTP Server
warp = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# MD5 for ledger hashing
md5 = "0.7"

# Telegram
teloxide = { version = "0.12", features = ["macros", "auto-send"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Tools
async-trait = "0.1"
shellwords = "1"
walkdir = "2"
glob = "0.3"
scraper = "0.20"
urlencoding = "2"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
imap = "2"
native-tls = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
